add eng version

--- a/style.css
+++ b/style.css
@@ -750,6 +750,9 @@ body {
 
 /*-------------------------------------media styles start-------------------------------------*/
 @media screen and (max-width: 960px) {
+  .wrapper {
+    max-width: 990px;
+  }
   .intro__img {
     width: 50%;
     height: 50%;
@@ -822,11 +825,23 @@ body {
   }
 }
 @media screen and (max-width: 767px) {
+  .wrapper {
+    overflow: hidden;
+    max-width: 797px;
+  }
+
+  .header__logo {
+    min-width: 10px;
+  }
+  .list__item-link {
+    max-width: 20px;
+  }
+
   .header {
     margin-top: 30px;
   }
   .list__item-link {
-    font-size: 15px;
+    font-size: 10px;
   }
   .intro__img {
     width: 75%;
@@ -916,6 +931,9 @@ body {
   }
   .up__content {
     bottom: 50px;
+  }
+  .footer__content {
+    margin-bottom: 10px;
   }
   @keyframes move {
     from {
